@@ -1,5 +1,13 @@
 2005-02-16  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/monitorwindow.py: change things around
+	a bit so that we lose some of the columns in the list
+	and the commit menu item. Now everything gets saved
+	by default unless you toggle the "ignore" button for
+	the change.
+
+2005-02-16  Mark McLoughlin  <markmc@redhat.com>
+
 	* admin-tool/sabayon.glade: add an about menu item.
 	
 	* admin-tool/monitorwindow.py: hook up the about
